--- a/charts/jaeger/requirements.yaml
+++ b/charts/jaeger/requirements.yaml
@@ -1,6 +1,6 @@
 dependencies:
   - name: cassandra
-    version: ^0.15.0
+    version: 0.15.3
     repository: https://kubernetes-charts-incubator.storage.googleapis.com/
     condition: provisionDataStore.cassandra
   - name: elasticsearch
