--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -279,6 +279,20 @@ collector:
     zipkin: {}
       # port: 9411
       # nodePort:
+  ingress:
+    enabled: false
+    annotations: {}
+    # Used to create an Ingress record.
+    # hosts:
+    #   - chart-example.local
+    # annotations:
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    # tls:
+      # Secrets must be manually created in the namespace.
+      # - secretName: chart-example-tls
+      #   hosts:
+      #     - chart-example.local
   resources: {}
     # limits:
     #   cpu: 1
